[package]
name = "jmeter-to-goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
xmltree = "0.10.3"
quick-xml = { version = "0.28.1", features = ["serialize"] }
serde = { version = "1.0.158", features = ["derive"] }